# APAC_ZZ059N616_MrAnderson

./: .gitignore  APAC_ZZ059N616_MrAnderson.docx  README.md
images/: agentic-ai-sequence-flow(1).drawio
sales_onboarding/: README.md  pyproject.toml
sales_onboarding/src/sales_onboarding/: crew.py  headless_main.py  main.py
sales_onboarding/src/sales_onboarding/config/: tasks.yaml
utils/: README.md
utils/compose/: docker-compose.yml  init.simple.sql
utils/compose/site-context/: marwan.txt
utils/elasticsearch-kibana/: deploy-elastic.sh  deploy-kibana.sh  init.sh
utils/mailhog/: run-mailhog.sh
utils/nginx/: init-webserver.sh
utils/nginx/site-content/: langley.txt
utils/persistence/: init.complex.sql  init.simple.sql  run-db.sh
utils/src/backup/persistence/: agents.yaml  main.py  tasks.yaml
utils/src/backup/read-summary/: crew.py  main.py
utils/src/backup/read-summary/config/: agents.yaml  tasks.yaml
