[project]
name = "sales_onboarding"
version = "0.1.0"
description = "sales-onboarding using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
sales_onboarding = "sales_onboarding.main:run"
run_crew = "sales_onboarding.main:run"
train = "sales_onboarding.main:train"
replay = "sales_onboarding.main:replay"
test = "sales_onboarding.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
